# haskell-flowdock-rest

./: .gitignore  .gitmodules  .travis.meta.yml  .travis.yml  README.md  TODO  flowdock-rest.cabal  package.yaml  stack-lts-2.yaml  stack-lts-3.yaml  stack-lts-4.yaml  stack-lts-5.yaml  stack-nightly.yaml  stack.yaml
fixtures/: flows.json  organisation-users.json  organisation.json  organisations.json  users.json
flowdock-grep/: flowdock-grep.cabal  package.yaml
flowdock-grep/src/: Main.hs
flowdock-rest-cli/: flowdock-rest-cli.cabal  package.yaml
flowdock-rest-cli/src/: Main.hs
spice-stats/: package.yaml  spice-stats.cabal
spice-stats/src/: Main.hs
src/Chat/Flowdock/: REST.hs
src/Chat/Flowdock/REST/: Auth.hs  Common.hs  Flow.hs  IO.hs  Internal.hs  Message.hs  Organisation.hs  Pretty.hs  Request.hs  URLs.hs  User.hs
src/Text/PrettyPrint/ANSI/Leijen/: AnsiPretty.hs
test/: Tests.hs
