name:               flowdock-rest
version:            0.2.0.0
synopsis:           Flowdock REST API
description:
  Bindings to the <https://www.flowdock.com/api/rest Flowdock REST API>.
  .
  Currently there are only non-destructive operations.
  Also not all types are written out.

category:           Web
homepage:           https://github.com/futurice/haskell-flowdock-rest#readme
bug-reports:        https://github.com/futurice/haskell-flowdock-rest/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Toni Okuogume <toni.okuogume@futurice.com>
license:            BSD3
license-file:       LICENSE
tested-with:        ghc ==8.0.2 ghc ==8.2.2 ghc ==8.4.4 ghc ==8.6.5
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  fixtures/flows.json
  fixtures/organisation-users.json
  fixtures/organisation.json
  fixtures/organisations.json
  fixtures/users.json
  README.md

source-repository head
  type:     git
  location: https://github.com/futurice/haskell-flowdock-rest

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      aeson                  >=0.8     && <1.5
    , aeson-compat           >=0.3.4.0 && <0.4
    , ansi-pretty            >=0.1     && <0.2
    , base                   >=4.7     && <4.15
    , base-compat-batteries  >=0.10.1  && <0.12
    , binary
    , binary-instances       >=1.0     && <2.0
    , binary-orphans         >=0.1.1   && <2.0
    , binary-tagged          >=0.1.1   && <0.3
    , bytestring             >=0.10    && <0.11
    , cassava                >=0.4.5.0 && <0.6
    , deepseq                >=1.3     && <1.5
    , exceptions             >=0.8     && <0.11
    , generics-sop           >=0.1     && <0.6
    , hashable               >=1.2     && <1.4
    , http-api-data
    , http-client            >=0.4.30  && <0.8
    , lens                   >=4.7     && <4.20
    , lucid                  >=2.9.6   && <2.10
    , postgresql-simple
    , QuickCheck
    , semigroups             >=0.16    && <0.19
    , swagger2
    , tagged                 >=0.7     && <0.9
    , text                   >=1.2     && <1.3
    , time                   >=1.4     && <1.12
    , transformers           >=0.3     && <0.6
    , vector                 >=0.10    && <0.13

  exposed-modules:
    Chat.Flowdock.REST
    Chat.Flowdock.REST.Auth
    Chat.Flowdock.REST.Common
    Chat.Flowdock.REST.Flow
    Chat.Flowdock.REST.IO
    Chat.Flowdock.REST.Internal
    Chat.Flowdock.REST.Message
    Chat.Flowdock.REST.Organisation
    Chat.Flowdock.REST.Request
    Chat.Flowdock.REST.URLs
    Chat.Flowdock.REST.User

  default-language: Haskell2010

test-suite flowdock-rest-test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   test
  ghc-options:      -Wall
  build-depends:
      aeson
    , aeson-compat
    , ansi-pretty
    , base
    , base-compat       >=0.9   && <0.12
    , binary-orphans
    , binary-tagged
    , bytestring
    , cassava
    , deepseq
    , exceptions
    , file-embed        >=0.0.9
    , flowdock-rest
    , generics-sop
    , hashable
    , http-client
    , lens
    , lucid
    , semigroups
    , tagged
    , tasty             >=0.10  && <1.2
    , tasty-quickcheck  >=0.8   && <0.11
    , text
    , time
    , transformers
    , vector

  default-language: Haskell2010
